update gc readme